--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 </nav>
     
 <h1> Welcome To The Home Page! </h1>
-    <p> My name is Morgan and this is a website about myself and some of the things that I like. I'm a Junior at UW-Madison studying Communications who is passionate about pop culture, which is what this site is about.</p>
+    <p> My name is Morgan and this is a website about myself and some of the things that I like. I'm a Junior at UW-Madison studying Communications who is passionate about pop culture, which is what this site is about!</p>
 
 <h3> The topics covered on my site are: </h3>
     <ol>
-        <li> TV Show </li>
         <li> Movies </li>
+        <li> TV Shows </li>
         <li> Podcasts </li>
     </ol>
     
